# chronicle5

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  sonar-project.properties
.github/workflows/: sonarlint.yml
docs/: CMakeLists.txt  Doxyfile.in  mainpage.md  renderer.md
examples/: CMakeLists.txt
examples/assets/: CMakeLists.txt
examples/example1/: CMakeLists.txt  example_app.cc  example_app.cpp  example_app.h  main.cpp
include/chronicle/: common.h  platform.h  renderer.h  storage.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  copyable.h  debug.h  log.cc  log.cpp  log.h  log.hpp  platform_detect.h  trace.h  utils.h
src/platform/: CMakeLists.txt  app.h  events.h  platform.h
src/platform/glfw/: glfw_map.cc  glfw_map.cpp  glfw_map.h  glfw_platform.cc  glfw_platform.cpp  glfw_platform.h  main.cc  main.cpp
src/renderer/: CMakeLists.txt  command_buffer.h  command_pool.h  common.h  device.cc  device.cpp  device.h  enums.cc  enums.h  fence.h  format.h  frame_buffer.h  image_view.h  instance.cc  instance.cpp  instance.h  pch.h  pipeline.h  platform.cc  platform.cpp  platform.h  render_pass.h  renderpass.h  semaphore.h  shader.h  shader_compiler.cc  shader_compiler.h  surface.cc  surface.cpp  surface.h  swap_chain.h  swapchain.h
src/renderer/vulkan/: vulkan_command_buffer.cc  vulkan_command_buffer.h  vulkan_command_pool.cc  vulkan_command_pool.h  vulkan_device.cc  vulkan_device.h  vulkan_fence.cc  vulkan_fence.h  vulkan_frame_buffer.cc  vulkan_frame_buffer.h  vulkan_image_view.cc  vulkan_image_view.h  vulkan_instance.cc  vulkan_instance.cpp  vulkan_instance.h  vulkan_pch.h  vulkan_pipeline.cc  vulkan_pipeline.h  vulkan_render_pass.cc  vulkan_render_pass.h  vulkan_renderpass.cc  vulkan_renderpass.h  vulkan_semaphore.cc  vulkan_semaphore.h  vulkan_shader.cc  vulkan_shader.h  vulkan_surface.cc  vulkan_surface.cpp  vulkan_surface.h  vulkan_swap_chain.cc  vulkan_swap_chain.h  vulkan_swapchain.cc  vulkan_swapchain.h  vulkan_utils.cc  vulkan_utils.h
src/storage/: CMakeLists.txt  entry.h  file.h  pch.h  storage.cc  storage.h
src/storage/filesystem/: filesystem_entry.cc  filesystem_entry.h  filesystem_file.cc  filesystem_file.h  filesystem_storage.cc  filesystem_storage.h
